fix: enhance code styling for better readability and formatting

--- a/apps/docs/src/index.css
+++ b/apps/docs/src/index.css
@@ -23,14 +23,14 @@
 
 code {
   font-family: 'JetBrains Mono', monospace !important;
-  @apply text-sm! sm:text-base!;
+  @apply text-sm! whitespace-pre-wrap! sm:text-base!;
 }
 
 pre code {
   @apply text-bg-800! dark:text-bg-100! break-all!;
 }
 
-code:not(pre code) {
+code:not(pre code, h3 code) {
   @apply bg-bg-200/30 text-bg-700 dark:bg-bg-800 dark:text-bg-300 rounded-sm px-1.5 py-1 shadow-sm;
 }
 
